List ppx_bench as a test dependency
Signed-off-by: Antonin Décimo <antonin@tarides.com>

--- a/spawn.opam
+++ b/spawn.opam
@@ -28,6 +28,7 @@ bug-reports: "https://github.com/janestreet/spawn/issues"
 depends: [
   "dune" {>= "2.8"}
   "ppx_expect" {with-test}
+  "ppx_bench" {with-test}
   "ocaml" {>= "4.05"}
   "odoc" {with-doc}
 ]
